--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "axios": "^1.2.0",
     "bootstrap": "^5.0.0-beta3",
     "clsx": "^1.1.1",
